--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -138,8 +138,14 @@ jobs:
         mkdir -p $HOME/.android
         echo "=== Starting buildozer build ==="
         yes | buildozer android debug --verbose 2>&1 | tee build.log
-        echo "=== Build completed ==="
-      continue-on-error: true
+        BUILD_EXIT_CODE=${PIPESTATUS[0]}
+        echo "=== Build completed with exit code: $BUILD_EXIT_CODE ==="
+        if [ $BUILD_EXIT_CODE -ne 0 ]; then
+          echo "=== ERROR: Build failed ==="
+          echo "=== Last 100 lines of build log ==="
+          tail -n 100 build.log
+          exit $BUILD_EXIT_CODE
+        fi
     
     - name: Check build log and find APK
       if: always()
